minitrace-macro/tests/trace/ui/err/011-optional-is-symbol.rs
use minitrace::trace;

#[trace(name = "a", type)]
fn f() {}

fn main() {
    f();
}
